--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hottubapp/core",
-  "version": "1.0.0",
+  "version": "1.0.0-1",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "private": false,
@@ -19,7 +19,6 @@
   "devDependencies": {
     "@jest/types": "^29.6.3",
     "@testing-library/jest-dom": "^6.6.3",
-    "@types/cheerio": "^0.22.35",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.4",
     "@typescript-eslint/eslint-plugin": "^8.24.0",
@@ -35,13 +34,8 @@
   "dependencies": {
     "@types/http-proxy-agent": "^4.0.0",
     "axios": "^1.7.9",
-    "cheerio": "^1.0.0",
-    "cloudscraper": "^4.6.0",
     "crypto": "^1.0.1",
     "https-proxy-agent": "^7.0.6",
-    "puppeteer": "^24.2.1",
-    "puppeteer-extra": "^3.3.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "request": "^2.88.2"
   },
   "directories": {
